--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,7 @@ input[type="email"],
 input[type="datetime-local"],
 input[type="date"],
 input[type="tel"],
+input[type="number"],
 select,
 textarea {
     width: 100%;
@@ -203,6 +204,17 @@ textarea {
     background-color: white;
     color: var(--text-primary);
     font-family: inherit;
+}
+
+/* Hide number input spinners for cleaner appearance */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
 
 select {
